--- a/video.html
+++ b/video.html
@@ -296,8 +296,9 @@
           </section>
         </div>
       </footer>
-    </div>
-    <script type='text/javascript'>
+    </div><
+     <script type="text/javascript" src="http://plethorathemes.com/js/bigvideo.js"></script>
+     <script type="text/javascript" src="http://plethorathemes.com/js/bigvideo_init.js"></script>    <script type='text/javascript'>
 /* <![CDATA[ */
 var VantageXSettings = {"theme_url":"http:\/\/vantagex.co\/wp-content\/themes\/vantagex"};
 /* ]]> */
